fix z-index for better theme compat

--- a/src_css/main.css
+++ b/src_css/main.css
@@ -2,12 +2,12 @@
 
 .game-container-wrapper {
   position: fixed;
+  z-index: 50;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background: #fefefe;
-  /*padding: 50px 200px;*/
   box-sizing: border-box;
   display: none;
 }
